package a.fosforo;

import a.ICorrecaoNutriente;
import a.ICorrecaoNutrienteQuantidadeAplicar;

public class CorrecaoFosforo 
    implements 
        ICorrecaoNutriente<FonteFosforo>,
        ICorrecaoNutrienteQuantidadeAplicar<FonteFosforo> {
    
}
