@startuml
class edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoCalcioMagnesio
class edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoFosforo
class edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoPotassio
class edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.EquilibrioCorrecaoCTC
class edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Fonte.FonteCalcioMagnesio
class edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Fonte.FonteFosforo
class edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Fonte.FontePotassio
interface edu.utfpr.cp.dacom.sa.soilcorrection.Modelo.Correcao.ICorrecaoNutriente
interface edu.utfpr.cp.dacom.sa.soilcorrection.Modelo.Correcao.ICorrecaoNutrienteQuantidadeAplicar
edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoCalcioMagnesio ..> edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Fonte.FonteCalcioMagnesio
edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoCalcioMagnesio --|> edu.utfpr.cp.dacom.sa.soilcorrection.Modelo.Correcao.ICorrecaoNutriente
edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoFosforo ..> edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Fonte.FonteFosforo
edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoFosforo --|> edu.utfpr.cp.dacom.sa.soilcorrection.Modelo.Correcao.ICorrecaoNutriente
edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoFosforo --|> edu.utfpr.cp.dacom.sa.soilcorrection.Modelo.Correcao.ICorrecaoNutrienteQuantidadeAplicar
edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoPotassio ..> edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Fonte.FontePotassio
edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoPotassio --|> edu.utfpr.cp.dacom.sa.soilcorrection.Modelo.Correcao.ICorrecaoNutriente
edu.utfpr.cp.dacom.sa.soilcorrection.Controle.Correcao.CorrecaoPotassio --|> edu.utfpr.cp.dacom.sa.soilcorrection.Modelo.Correcao.ICorrecaoNutrienteQuantidadeAplicar
@enduml